docs(plan): 스파이크 검증 결과로 인터페이스·M4·IT 하니스 정정
- 동결 인터페이스 cascade: ProbeRouter.record(4-arg) → CoverageBridge.
  recordCoverage(Class,classId,probeId)+setTotalProbeCount (Task 7/11/12/17)
- CoverageContext가 TestStore 참조 보유 (Task 1/10/16) — 핫패스 레지스트리 조회 제거(S2)
- M4(Task 11): "리서치 스파이크"→"검증된 spike/ 코드 이식"(advice 3종+ProbeInstrumentation:
  jacoco Instrumenter ClassFileTransformer + ModifiedSystemClassRuntime)
- IT 하니스(C2): retransformation(필드추가 금지) 제거→fresh MemoryClassLoader 로드타임 계측;
  E2E는 별도 e2eTest 태스크(real -javaagent, 파일로만 단언)로 분리해 이중계측 차단
- Bootstrap(S1/S4): __bootstrap_commit__ 제거→premain manifest 헤더, ProbeInstrumentation.
  install(inst,options) 자체 AgentBuilder 소유
- 서블릿 단일 choke point + store 해소(S6), 셀프리뷰/v2 배너 갱신

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>